[gd_scene load_steps=5 format=3 uid="uid://bh0k0bku3axg7"]

[ext_resource type="Script" uid="uid://cpq78j7po06tp" path="res://final/scripts/fin.gd" id="1_4rw7s"]
[ext_resource type="Texture2D" uid="uid://b6wu2khbcy1kb" path="res://final/images/pantalla1.png" id="2_wjbn0"]
[ext_resource type="Texture2D" uid="uid://2ewfmjfeda8q" path="res://final/images/pantalla2.png" id="3_b3tus"]
[ext_resource type="Texture2D" uid="uid://dbnb15pp4sluh" path="res://final/images/Pantalla3.png" id="4_lfmvp"]

[node name="Fin" type="Node2D"]
script = ExtResource("1_4rw7s")

[node name="pantalla1" type="TextureRect" parent="."]
offset_right = 640.0
offset_bottom = 359.0
texture = ExtResource("2_wjbn0")
expand_mode = 1

[node name="pantalla2" type="TextureRect" parent="."]
offset_right = 639.0
offset_bottom = 362.0
texture = ExtResource("3_b3tus")
expand_mode = 1

[node name="pantalla3" type="TextureRect" parent="."]
offset_right = 640.0
offset_bottom = 358.0
texture = ExtResource("4_lfmvp")
expand_mode = 1
